# circle_organizer

./: README.md  calendar.cpp  calendar.h  circle.cpp  circle.h  main.cpp  window.cpp  window.h
project/: CMakeLists.txt  action.cpp  action.h  actions.cpp  actions.h  day.cpp  day.h  main.cpp  parameters.h
qt/: CMakeLists.txt  main.cpp
